now able to sort in ascending order, will change so that in descending order.  Also need to fix spaces and overlaps

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -16,3 +16,8 @@
   font: 15px sans-serif;
   z-index: 10;
 }
+
+label {
+  position: absolute;
+  float: left;
+}
